# Unige_stuff

./: CNAME  README.md
ADC/: comandiUsati.txt
APA/: LCS.cpp  cfc.cpp  dijkstra.cpp  floyd.cpp  hanoi.cpp  nationalflag.cpp  prim.cpp  topsort_dueversioni.cpp  union_find.cpp
APPUNTI/: APA - risposte.docx  BD-Normalizzazione.docx  Domande ADC.docx  DomandeCS.docx  DomandeFESI.docx  DomandeIDS.docx  DomandePCAD.docx  DomandeQuant.docx  FIS-DESGIN PATTERNS.docx  FIS-Modelli.xlsx  FIS-Stili Architetturali.xlsx  FIS-Uml.docx  PilloleDiCS.docx  Risposte TAC.docx
ASD LAB/: Randomquick.cpp  jdoodle3dll.cpp  multiset.txt  quick.cpp  tree-chsib.cpp
SAWproject/: error_bar.php  footer.html  head.html  index.php  login_form.php  nav.php  recover_form.php  registration_form.php  reset_pwd.php  search_page.php  show_file.php  show_profile.php  show_project_folder.php  show_projects.php  show_public_profile.php  style.css  update_pwd_form.php  write_newsletter.php
SETI/incapache-students/: CMakeLists.txt  Makefile  README  incApache.h  incApache_aux.c  incApache_http.c  incApache_main.c  incApache_threads.c  index.html
SETI/incapache-students/script/: script.bash  script2.py
SETI/incapache-students/www-root/: 000_style.css  404_Not_Found.html  501_Method_Not_Implemented.html  epochtime.html  internet40years.html  web20years.html
SETI/incapache-students/www-root/css/: stile.css  stile.css.mime
TDI/: Genova.txt  LVbizantino.cpp  MCbizantino.cpp  aritm.cpp  fingerprint.cpp  huffman.cpp  lvqs.cpp  matrix.cpp  miller.cpp  mincut.cpp  mincutold.cpp
diOCaml/: lpolab1.ml  (+1 more)
(+413 files in other folders)
